core/media/executor/outputs/6a9b0512-2050-4a00-9f27-55e1cca99b59.txt
  File "C:\Users\Administrator\OneDrive\Desktop\Oj\Project\core\media\executor\codes\6a9b0512-2050-4a00-9f27-55e1cca99b59.py", line 2
    if(a==0 || a==1):
             ^
SyntaxError: invalid syntax
